Bug 451699 - Annoying errors when using the git blame plugin
Summary: Annoying errors when using the git blame plugin
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.03.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-19 19:51 UTC by Antonio Rojas
Modified: 2022-03-20 12:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (80.03 KB, image/png)
2022-03-19 20:04 UTC, Antonio Rojas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2022-03-19 19:51:14 UTC
Since commit 867301eb0376594c35f7c4dc462a7c847911f91e, if the git blame plugin is enabled, an annoying error pops up every time you open a file which is not in a git repo. Even just switching tabs makes the error panel pop up again after closing it.
Comment 1 Christoph Cullmann 2022-03-19 19:56:16 UTC
Hmm, I get no error.
What error does popup for you?
Comment 2 Antonio Rojas 2022-03-19 20:03:09 UTC
I see an attempt to fix this at b30c80f903ebf6914beae8a16c18604e8bfbd078, but it doesn't account for localized systems
Comment 3 Antonio Rojas 2022-03-19 20:04:52 UTC
Created attachment 147603 [details]
Screenshot

Screenshot showing the error panel
Comment 4 Christoph Cullmann 2022-03-19 20:22:06 UTC
Ok, yes, that is true.
Either we must ignore any errors or we would need to enforce the language for the sub process to English to be able to parse that.
Comment 5 Bug Janitor Service 2022-03-19 20:43:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/685
Comment 6 Christoph Cullmann 2022-03-20 12:21:56 UTC
Git commit c139272667dbe6e1a40b85869c1ac346452b6ef7 by Christoph Cullmann.
Committed on 20/03/2022 at 12:21.
Pushed by cullmann into branch 'master'.

ignore blame errors

parsing translated errors is hard and
not translating them will not make people happy
either

=> just ignore them

M  +7    -19   addons/git-blame/kategitblameplugin.cpp

https://invent.kde.org/utilities/kate/commit/c139272667dbe6e1a40b85869c1ac346452b6ef7
Comment 7 Christoph Cullmann 2022-03-20 12:25:20 UTC
Git commit dc8369f75684bddd56ce2473e00258cb8684245f by Christoph Cullmann.
Committed on 20/03/2022 at 12:25.
Pushed by cullmann into branch 'release/22.04'.

ignore blame errors

parsing translated errors is hard and
not translating them will not make people happy
either

=> just ignore them


(cherry picked from commit c139272667dbe6e1a40b85869c1ac346452b6ef7)

M  +7    -19   addons/git-blame/kategitblameplugin.cpp

https://invent.kde.org/utilities/kate/commit/dc8369f75684bddd56ce2473e00258cb8684245f