ignore blame errors

parsing translated errors is hard and
not translating them will not make people happy
either

=> just ignore them

BUG: 451699


(cherry picked from commit c139272667dbe6e1a40b85869c1ac346452b6ef7)